revise keybindings and add hooks to flash the active pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,12 +91,11 @@ set-option -g visual-activity off
 # bell-action option.
 set-option -g visual-bell off
 
-
-
 ### Left ###
 # Display string (by default the session name) to the left of the status bar.
 # set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
-set -g status-left '#{?client_prefix,#[bg=default fg=colour5 bold],#[bg=default fg=colour2 bold]} #S '
+set -g status-left \
+    '#{?client_prefix,#[bg=default fg=colour5 bold]-,#[bg=default fg=colour2 bold][}#S#{?client_prefix,-,]}'
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
@@ -193,10 +192,9 @@ set-window-option -g pane-active-border-style "fg=colour0,bg=default"
 # If on, tmux captures the mouse and allows mouse events to be bound as key bindings.
 set-option -g mouse on
 
-
-###################################################
-############## key bindings #######################
-###################################################
+###############
+##### KEY #####
+###############
 
 # Set the time in milliseconds for which tmux waits after an escape is input to
 # determine if it is part of a function or meta key sequences.  The default is
@@ -204,18 +202,8 @@ set-option -g mouse on
 # The default is half a second, which makes vim kind of painful.
 set-option -sg escape-time 0
 
-# Switch me back to ^A, thanks
+# Set the key accepted as a prefix key.
 set-option -g prefix C-a
-unbind-key C-b
-bind-key a send-prefix
-
-# Bind ^A ^A to switch to the last-used window:
-bind-key C-a last-window
-
-bind-key c new-window
-bind-key - split-window -v
-unbind-key % # unbind default split-wondow -h
-bind-key | split-window -h
 
 # vi-like bindings
 # Use vi or emacs-style key bindings in the status line, for example at the
@@ -228,22 +216,116 @@ set-option -g status-keys vi
 # ‘vi’.
 set-window-option -g mode-keys vi
 
+
+##################################
+############# Hooks ##############
+##################################
+
+# Flash the active pane every time a pane is selected.
+set-hook after-select-pane 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .01 && tmux set -g window-active-style \"\" "'
+# Flash the active pane every time a window is selected.
+set-hook after-select-window 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .03 && tmux set -g window-active-style \"\" "'
+
+###################################################
+############## key bindings #######################
+###################################################
+
+# Unbind non-used key bindings
+unbind-key C-b  # Send the prefix key (C-b) through to the application.
+unbind-key C-o  # Rotate the panes in the current window forwards.
+unbind-key C-z  # Suspend the tmux client.
+unbind-key !  # Break the current pane out of the window.
+unbind-key '"'  # Split the current pane into two, top and bottom.
+unbind-key '#' # List all paste buffers.
+unbind-key '$'  # Rename the current session.
+unbind-key %  # Split the current pane into two, left and right.
+unbind-key &  # Kill the current window.
+unbind-key "'"  # Prompt for a window index to select.
+unbind-key (  # Switch the attached client to the previous session.
+unbind-key )  # Switch the attached client to the next session.
+# unbind-key ,  # Rename the current window.
+unbind-key -  # Delete the most recently copied buffer of text.
+# unbind-key .  # Prompt for an index to move the current window.
+# unbind-key 0 to 9  # Select windows 0 to 9.
+# unbind-key :  # Enter the tmux command prompt.
+unbind-key \;  # Move to the previously active pane.
+unbind-key =  # Choose which buffer to paste interactively from a list.
+# unbind-key ?  # List all key bindings.
+unbind-key D  # Choose a client to detach.
+unbind-key L  # Switch the attached client back to the last session.
+unbind-key [  # Enter copy mode to copy text or view the history.
+unbind-key ]  # Paste the most recently copied buffer of text.
+unbind-key c  # Create a new window.
+unbind-key d  # Detach the current client.
+unbind-key f  # Prompt to search for text in open windows.
+unbind-key i  # Display some information about the current window.
+unbind-key l  # Move to the previously selected window.
+unbind-key n  # Change to the next window.
+unbind-key o  # Select the next pane in the current window.
+unbind-key p  # Change to the previous window.
+unbind-key q  # Briefly display pane indexes.
+unbind-key r  # Force redraw of the attached client.
+unbind-key m  # Mark the current pane (see select-pane -m).
+unbind-key M  # Clear the marked pane.
+unbind-key s  # Select a new session for the attached client interactively.
+unbind-key t  # Show the time.
+unbind-key w  # Choose the current window interactively.
+unbind-key x  # Kill the current pane.
+unbind-key z  # Toggle zoom state of the current pane.
+unbind-key {  # Swap the current pane with the previous pane.
+unbind-key }  # Swap the current pane with the next pane.
+unbind-key '~'  # Show previous messages from tmux, if any.
+unbind-key Pageup  # Enter copy mode and scroll one page up.
+unbind-key Up  # Change to the pane above of the current pane.
+unbind-key Down  # Change to the pane below of the current pane.
+unbind-key Left  # Change to the pane left of the current pane.
+unbind-key Right  # Change to the pane right of the current pane.
+unbind-key M-1  # Arrange panes in even-horizontal
+unbind-key M-2  # Arrange panes in even-vertical
+unbind-key M-3  # Arrange panes in main-horizontal
+unbind-key M-4  # Arrange panes in main-vertical
+unbind-key M-5  # Arrange panes in tiled
+unbind-key Space  # Arrange the current window in the next preset layout.
+unbind-key M-n  # Move to the next window with a bell or activity marker.
+unbind-key M-o  # Rotate the panes in the current window backwards.
+unbind-key M-p  # Move to the previous window with a bell or activity marker.
+unbind-key C-Up  # Resize the current pane in steps of one cell.
+unbind-key C-Down  # Resize the current pane in steps of one cell.
+unbind-key C-Left  # Resize the current pane in steps of one cell.
+unbind-key C-Right  # Resize the current pane in steps of one cell.
+unbind-key M-Up  # Resize the current pane in steps of five cell.
+unbind-key M-Down  # Resize the current pane in steps of five cell.
+unbind-key M-Left  # Resize the current pane in steps of five cell.
+unbind-key M-Right  # Resize the current pane in steps of five cell.
+
+
+bind-key C-a last-window  # Select the last (previously selected) window.
+bind-key c new-window  # Create a new window.
+bind-key C-n next-window  # Move to the next window in the session.
+bind-key C-p previous-window  # Move to the previous window in the session.
+bind-key - split-window -v  # Create a new pane by vertically splitting target-pane.
+bind-key | split-window -h  # Create a new pane by horizontally splitting target-pane.
+
+bind-key [ copy-mode  # Enter copy mode to copy text or view the history.
+bind-key p paste-buffer  # Insert the contents of a paste buffer into the specified pane.
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key -Tcopy-mode-vi Escape send -X cancel
 
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key h select-pane -L
-bind-key l select-pane -R
+bind-key j select-pane -D  # Make the pane below target-pane.
+bind-key k select-pane -U  # Make the pane above target-pane.
+bind-key h select-pane -L  # Make the left pane target-pane.
+bind-key l select-pane -R  # Make the right pane target-pane.
 
-bind-key C-j resize-pane -D 5
-bind-key C-k resize-pane -U 5
-bind-key C-h resize-pane -L 5
-bind-key C-l resize-pane -R 5
+bind-key C-j resize-pane -D 5  # Resize a pane downwards by 5 cells.
+bind-key C-k resize-pane -U 5  # Resize a pane upwards by 5 cells.
+bind-key C-h resize-pane -L 5  # Resize a pane to the left by 5 cells.
+bind-key C-l resize-pane -R 5  # Resize a pane to the right by 5 cells.
 
-unbind-key o
-bind-key C-b break-pane
-bind-key C-m command-prompt -p "send pane to:" "join-pane -t '%%'"
+bind-key C-b break-pane  # Break the pane off from its containing window.
+bind-key C-m command-prompt -p "send pane to:" "join-pane -t '%%'"  # Move the pane into the selected window.
 
-bind r source-file ~/.tmux.conf
+bind-key t clock-mode  # Display a large clock.
+bind-key d detach-client  # Detach the current client.
+bind-key C-o rotate-window  # Rotate the positions of the panes within a window.
+bind r source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
