change hyphen with curly brackets

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,7 @@ set-option -g visual-bell off
 # Display string (by default the session name) to the left of the status bar.
 # set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
 set -g status-left \
-    '#{?client_prefix,#[bg=default fg=colour5 bold]-,#[bg=default fg=colour2 bold][}#S#{?client_prefix,-,]}'
+    '#{?client_prefix,#[bg=default fg=colour5 bold](,#[bg=default fg=colour2 bold][}#S#{?client_prefix,),]}'
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
