add missing -g to set-hook lines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -222,9 +222,9 @@ set-window-option -g mode-keys vi
 ##################################
 
 # Flash the active pane every time a pane is selected.
-set-hook after-select-pane 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .01 && tmux set -g window-active-style \"\" "'
+set-hook -g after-select-pane 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .01 && tmux set -g window-active-style \"\" "'
 # Flash the active pane every time a window is selected.
-set-hook after-select-window 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .03 && tmux set -g window-active-style \"\" "'
+set-hook -g after-select-window 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .03 && tmux set -g window-active-style \"\" "'
 
 ###################################################
 ############## key bindings #######################
@@ -275,7 +275,7 @@ unbind-key z  # Toggle zoom state of the current pane.
 unbind-key {  # Swap the current pane with the previous pane.
 unbind-key }  # Swap the current pane with the next pane.
 unbind-key '~'  # Show previous messages from tmux, if any.
-unbind-key Pageup  # Enter copy mode and scroll one page up.
+unbind-key PageUp  # Enter copy mode and scroll one page up.
 unbind-key Up  # Change to the pane above of the current pane.
 unbind-key Down  # Change to the pane below of the current pane.
 unbind-key Left  # Change to the pane left of the current pane.
