add choose-pane and zoom-toggle to key-bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -250,7 +250,7 @@ unbind-key -  # Delete the most recently copied buffer of text.
 # unbind-key :  # Enter the tmux command prompt.
 unbind-key \;  # Move to the previously active pane.
 unbind-key =  # Choose which buffer to paste interactively from a list.
-# unbind-key ?  # List all key bindings.
+unbind-key ?  # List all key bindings.
 unbind-key D  # Choose a client to detach.
 unbind-key L  # Switch the attached client back to the last session.
 unbind-key [  # Enter copy mode to copy text or view the history.
@@ -305,6 +305,8 @@ bind-key C-n next-window  # Move to the next window in the session.
 bind-key C-p previous-window  # Move to the previous window in the session.
 bind-key - split-window -v  # Create a new pane by vertically splitting target-pane.
 bind-key | split-window -h  # Create a new pane by horizontally splitting target-pane.
+bind-key w choose-tree -Zw  # Put a pane into tree mode, where a session, window or pane may be chosen interactively from a list.
+bind-key z resize-pane -Z  # Toggle the active pane zoomed (occupying the whole of the window) and unzoomed (its normal position in the layout).
 
 bind-key [ copy-mode  # Enter copy mode to copy text or view the history.
 bind-key p paste-buffer  # Insert the contents of a paste buffer into the specified pane.
