remove clock from the status bar, and add keybindings for layout switching

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,7 +110,8 @@ set-option -g status-left-length 10
 # set -g status-right "%a %d %b, %H:%M"
 # set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
 # set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
-set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
+# set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
+set-option -g status-right "#[fg=colour4]@#[bold]#H#[none,fg=default,bg=default]"
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
@@ -311,6 +312,8 @@ bind-key p paste-buffer  # Insert the contents of a paste buffer into the specif
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key -Tcopy-mode-vi Escape send -X cancel
+
+bind-key Space next-layout  # Move a window to the next layout and rearrange the panes to fit.
 
 bind-key j select-pane -D  # Make the pane below target-pane.
 bind-key k select-pane -U  # Make the pane above target-pane.
