remove time from the status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,7 +110,8 @@ set-option -g status-left-length 10
 # set -g status-right "%a %d %b, %H:%M"
 # set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
 # set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
-set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
+# set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
+set-option -g status-right "#[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
