update to the latest tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -273,8 +273,8 @@ unbind-key t  # Show the time.
 unbind-key w  # Choose the current window interactively.
 unbind-key x  # Kill the current pane.
 unbind-key z  # Toggle zoom state of the current pane.
-unbind-key {  # Swap the current pane with the previous pane.
-unbind-key }  # Swap the current pane with the next pane.
+unbind-key '{'  # Swap the current pane with the previous pane.
+unbind-key '}'  # Swap the current pane with the next pane.
 unbind-key '~'  # Show previous messages from tmux, if any.
 unbind-key PageUp  # Enter copy mode and scroll one page up.
 unbind-key Up  # Change to the pane above of the current pane.
