remove the hostname from the status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,7 @@ set-option -g visual-bell off
 # Display string (by default the session name) to the left of the status bar.
 # set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
 set -g status-left \
-    '#{?client_prefix,#[bg=default fg=colour5 bold](,#[bg=default fg=colour2 bold][}#S#{?client_prefix,),]}'
+    '#{?client_prefix,#[bg=default fg=default](,#[bg=default fg=default][}#S#{?client_prefix,),]}'
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
@@ -111,7 +111,8 @@ set-option -g status-left-length 10
 # set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
 # set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
 # set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
-set-option -g status-right "#[fg=colour4]@#[bold]#H#[none,fg=default,bg=default]"
+# set-option -g status-right "#[fg=blue]@#[bold]#H#[none,fg=default,bg=default]"
+set-option -g status-right "%H%M"
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
@@ -159,7 +160,7 @@ set-window-option -g window-status-bell-style "none"
 set-window-option -g window-status-current-format " #I.#W "
 
 # Set status line style for the currently active window.
-set-window-option -g window-status-current-style "fg=colour14,bg=default"
+set-window-option -g window-status-current-style "fg=yellow,bg=default"
 
 # Set the format in which the window is displayed in the status line window
 # list.
@@ -180,10 +181,10 @@ set-window-option -g window-status-separator ""
 set-window-option -g window-style "fg=default,bg=default"
 
 # Set the pane border style for panes aside from the active pane.
-set-window-option -g pane-border-style "fg=colour0,bg=default"
+set-window-option -g pane-border-style "fg=black,bg=default"
 
 # Set the pane border style for the currently active pane.
-set-window-option -g pane-active-border-style "fg=colour0,bg=default"
+set-window-option -g pane-active-border-style "fg=black,bg=default"
 
 
 #################
@@ -298,7 +299,6 @@ unbind-key M-Up  # Resize the current pane in steps of five cell.
 unbind-key M-Down  # Resize the current pane in steps of five cell.
 unbind-key M-Left  # Resize the current pane in steps of five cell.
 unbind-key M-Right  # Resize the current pane in steps of five cell.
-
 
 bind-key C-a last-window  # Select the last (previously selected) window.
 bind-key c new-window  # Create a new window.
