--- a/xdg_config/conky/conky.conf
+++ b/xdg_config/conky/conky.conf
@@ -51,8 +51,6 @@ conky.config = {
     out_to_x = true,
     own_window = true,
     own_window_class = 'Conky',
-    own_window_transparent = true,
-    own_window_argb_visual = true,
     own_window_type = 'normal',
     show_graph_range = false,
     show_graph_scale = false,
@@ -64,19 +62,36 @@ conky.config = {
 }
 
 conky.text = [[
-System: $sysname
+System: $sysname ${machine}
 Kernel: $kernel
-${color grey}Uptime:$color $uptime
-$hr
-${color grey}CPU Usage:$color ${cpu cpu0}%
+Load Average: ${loadavg}
+
+CPU
+Model: ${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' -e 's/CPU.*$//' -e 's/([^)]*)//g' | tail -n 1}
+${color grey}Usage:$color ${cpu cpu0}%
 ${cpubar cpu0}
 
-${color grey}RAM Usage:$color $mem/$memmax - $memperc%
+RAM
+Total: ${memmax}
+${color grey}Usage:$color $memperc% ($mem)
 ${membar}
 
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc%
-${color grey}Networking: Up:$color ${upspeed} ${color grey}- Down:$color ${downspeed}
-$hr
-${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+Swap
+Total: ${swapmax}
+${color grey}Usage:$color $swapperc% ($swap)
+${swapbar}
+${if_match "${nvidia modelname}" != ""}
+${color grey}GPU ${hr}
+${nvidia modelname}
+${nvidia gpuutil}%
+${nvidiabar gpuutil}
+${endif}
+Networking
+Interface: ${gw_iface}
+${color}${font}Local IP: ${gw_ip}
+
+File Systems
+Total: ${fs_size /}
+Usage: ${fs_used_perc /}% (${fs_used /})
+${fs_bar 6 /}
 ]]
