overhaul for the new usecase

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -227,9 +227,9 @@ set-window-option -g mode-keys vi
 ##################################
 
 # Flash the active pane every time a pane is selected.
-set-hook -g after-select-pane 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .01 && tmux set -g window-active-style \"\" "'
+# set-hook -g after-select-pane 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .01 && tmux set -g window-active-style \"\" "'
 # Flash the active pane every time a window is selected.
-set-hook -g after-select-window 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .03 && tmux set -g window-active-style \"\" "'
+# set-hook -g after-select-window 'run-shell "tmux set-window-option -g window-active-style \"bg=colour16\" && sleep .03 && tmux set -g window-active-style \"\" "'
 
 ###################################################
 ############## key bindings #######################
@@ -336,4 +336,4 @@ bind-key C-m command-prompt -p "send pane to:" "join-pane -t '%%'"  # Move the p
 bind-key t clock-mode  # Display a large clock.
 bind-key d detach-client  # Detach the current client.
 bind-key C-o rotate-window  # Rotate the positions of the panes within a window.
-bind r source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "sourced .tmux.conf"
