--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -194,7 +194,7 @@ set-window-option -g pane-active-border-style "fg=black,bg=default"
 # If on, tmux captures the mouse and allows mouse events to be bound as key bindings.
 set-option -g mouse on
 
-# Diable the right-click menu.
+# Disable the right-click menu.
 unbind -n MouseDown3Pane
 
 ###############
